@@ -21,6 +21,8 @@ Revision history for {{ $dist->name }}:
 
   - Stop regenerating MANIFEST.SKIP.
 
+  - Add GitHub workflow to run tests.
+
 v0.6.4    2025-08-03 12:03:08+01:00 Europe/London
   [Documentation]
   - README is now generated by Dist::Zilla::Plugin::UsefulReadme.
